EOD 28th JUNE 2017

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 body{
 	padding-top:40px;
 }
+.carouselItem{
+    background-color:#eee;
+    min-height:300px;
+    padding:10px;
+
+}
 .menu{
 	background-color: white;
 
